--- a/HelloMVC/src/main/webapp/WEB-INF/web.xml
+++ b/HelloMVC/src/main/webapp/WEB-INF/web.xml
@@ -15,11 +15,13 @@
 	</listener>
 
 	<!-- Processes application requests -->
-	<servlet>
+	<servlet> <!--스프링의 별명은 spring servlet이다. DispatchServlet = 총지배인. 제일먼저 요청을 받는 곳.  -->
+	
 		<servlet-name>appServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
+													<!--웹 관련된 내용, 환경설정은 servlet-context.xml에서  -->
 			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
