euc-kr 한글 깨짐 설정 파일

--- a/HelloMVC/src/main/webapp/WEB-INF/web.xml
+++ b/HelloMVC/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,26 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-
+	<!--####################listener와 servlet 사이에 필터를 넣어준다. 한글 설정!  -->
+	<filter>
+    <filter-name>encodingFilter</filter-name>
+    <filter-class>
+                  org.springframework.web.filter.CharacterEncodingFilter
+          </filter-class>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>EUC-KR</param-value>  <!-- UTF-8 -->
+    </init-param>
+    <init-param>
+      <param-name>forceEncoding</param-name>
+      <param-value>true</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>encodingFilter</filter-name>
+    <url-pattern>*.do</url-pattern>
+  </filter-mapping>
+  <!--####################listener와 servlet 사이에 필터를 넣어준다. 한글 설정!  -->	
 	<!-- Processes application requests -->
 	<servlet> <!--스프링의 별명은 spring servlet이다. DispatchServlet = 총지배인. 제일먼저 요청을 받는 곳.  -->
 	
@@ -29,7 +48,7 @@
 		
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
 
 </web-app>
