--- a/Sawons/src/main/webapp/WEB-INF/web.xml
+++ b/Sawons/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,24 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	 <filter>
+    <filter-name>encodingFilter</filter-name>
+    <filter-class>
+                org.springframework.web.filter.CharacterEncodingFilter
+        </filter-class>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>EUC-KR</param-value>
+    </init-param>
+    <init-param>
+      <param-name>forceEncoding</param-name>
+      <param-value>true</param-value>
+    </init-param>
+  	</filter>
+  	<filter-mapping>
+    	<filter-name>encodingFilter</filter-name>
+    	<url-pattern>*.do</url-pattern>
+ 	 </filter-mapping>
 
 	<!-- Processes application requests -->
 	<servlet>
@@ -27,7 +45,7 @@
 		
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
 
 </web-app>
