--- a/Sawons/src/main/webapp/WEB-INF/web.xml
+++ b/Sawons/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,7 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	<!--한글 filter -------------------------------------------------------------------  -->
 	 <filter>
     <filter-name>encodingFilter</filter-name>
     <filter-class>
@@ -31,7 +32,8 @@
     	<filter-name>encodingFilter</filter-name>
     	<url-pattern>*.do</url-pattern>
  	 </filter-mapping>
-
+		<!--한글 filter -------------------------------------------------------------------  -->
+		
 	<!-- Processes application requests -->
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
