--- a/_227.__[_THIS__LEC_maven_JDBC_]_KWAJE_MY_SPRING_Legacy_THIS_WAN_3/.project
+++ b/_227.__[_THIS__LEC_maven_JDBC_]_KWAJE_MY_SPRING_Legacy_THIS_WAN_3/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>HelloMVC</name>
+	<name>_227.__[_THIS__LEC_maven_JDBC_]_KWAJE_MY_SPRING_Legacy_THIS_WAN_3</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -12,6 +12,11 @@
 		</buildCommand>
 		<buildCommand>
 			<name>org.eclipse.wst.common.project.facet.core.builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>org.springframework.ide.eclipse.core.springbuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
@@ -32,6 +37,7 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
+		<nature>org.springframework.ide.eclipse.core.springnature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
