--- a/MabatisProject/src/main/webapp/WEB-INF/web.xml
+++ b/MabatisProject/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,28 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	
+	<!--####################listener와 servlet 사이에 필터를 넣어준다. 한글 설정!  -->
+	<filter>
+    <filter-name>encodingFilter</filter-name>
+    <filter-class>
+                  org.springframework.web.filter.CharacterEncodingFilter
+          </filter-class>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>EUC-KR</param-value>  <!-- UTF-8 -->
+    </init-param>
+    <init-param>
+      <param-name>forceEncoding</param-name>
+      <param-value>true</param-value>
+    </init-param>
+  	</filter>
+ 	 <filter-mapping>
+    	<filter-name>encodingFilter</filter-name>
+    	<url-pattern>*.do</url-pattern>
+  	</filter-mapping>
+<!--####################listener와 servlet 사이에 필터를 넣어준다. 한글 설정!  -->	
+	
 
 	<!-- Processes application requests -->
 	<servlet>
